tests/mm1-multinode-tests/tests/snapshots/protocol_manager__.snap
---
source: tests/mm1-multinode-tests/tests/protocol-manager.rs
expression: "[e(unregister(ctx, \"proto-1\").await.expect_err(\"p1 is in use\")),\ne(unregister(ctx, \"proto-2\").await.expect_err(\"p2 is in use\")),]"
---
- - unregister
  - "ProtocolInUse: protocol in use"
- - unregister
  - "ProtocolInUse: protocol in use"
