tests/mm1-multinode-tests/tests/snapshots/protocol_manager__declare_protocol.snap
---
source: tests/mm1-multinode-tests/tests/protocol-manager.rs
expression: types
---
[
    "protocol_manager::proto::Hello",
    "protocol_manager::proto::Bye",
]
