tests/mm1-multinode-tests/tests/snapshots/protocol_manager__no_protocol_no_wait.snap
---
source: tests/mm1-multinode-tests/tests/protocol-manager.rs
expression: e(reason)
---
- get
- "NoProtocol: no such protocol"
