tests/mm1-multinode-tests/tests/snapshots/protocol_manager__no_protocol_with_timeout.snap
---
source: tests/mm1-multinode-tests/tests/protocol-manager.rs
expression: e(reason)
---
- get
- "NoProtocol: timed out waiting for protocol"
