tests/mm1-multinode-tests/tests/snapshots/protocol_manager__unregister_proto-1_twice.snap
---
source: tests/mm1-multinode-tests/tests/protocol-manager.rs
expression: "e(unregister(ctx,\n\"proto-1\").await.expect_err(\"unregister proto-1 should have failed\"))"
---
- unregister
- "NoProtocol: no such protocol"
