tests/mm1-multinode-tests/tests/snapshots/protocol_manager__unregister_proto-2_while_in_use.snap
---
source: tests/mm1-multinode-tests/tests/protocol-manager.rs
expression: "e(unregister(ctx,\n\"proto-2\").await.expect_err(\"unregister proto-2 should have failed\"))"
---
- unregister
- "ProtocolInUse: protocol in use"
